--- a/style.css
+++ b/style.css
@@ -1,12 +1,55 @@
 body {
-  background-color: midnightblue;
+  background-color: #1b1b32;
   color: white;
   margin: 0;
   width: 100%;
   height: 100vh;
+  font-family: Tahoma;
+  font-size: 16px;
 }
-
+h1,
+p {
+  text-align: center;
+  margin: 1em auto;
+}
+form {
+  margin: 0 auto;
+  max-width: 500px;
+  min-width: 300px;
+  width: 60vw;
+}
 label {
   display: block;
   margin: 0.5rem 0;
+}
+form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+fieldset {
+  border: none;
+  margin: 2rem 0;
+  border-bottom: 3px solid grey;
+}
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
+input,
+textarea,
+select {
+  margin: 10px;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+}
+.inline {
+  width: unset;
+  margin: 0;
+  margin-right: 2em;
+  vertical-align: middle;
 }
